--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p>This is my frontend</p>
+    <p>this is my finished frontend</p>
     
 </body>
 </html>
